--- a/src/components/sidebar/sidebar-main/sidebar-main.component.html
+++ b/src/components/sidebar/sidebar-main/sidebar-main.component.html
@@ -1,33 +1,55 @@
-<mat-card appearance="outlined" class="h-full max-h-full">
-  <mat-card-header>Header {{this.userService.server()}}</mat-card-header>
-  <mat-card-content class="overflow-y-scroll">
-    <ul>
+<mat-card appearance="outlined" class="h-full max-w-fit max-h-full">
+  <mat-card-header>
+    <a [routerLink]="['/']">
+    Home
+    </a>
+    @if(preferencesService.sidebar_folded()){
+      <span class="pl-2">
+        {{userService.server()}}
+      </span>
+    }
+  </mat-card-header>
+  <mat-card-content class="overflow-y-scroll w-full ">
+    <ul class="  w-max flex flex-col flex-grow">
     @for(server of servers; track server){
-      <li>
+      <li class="">
         <app-sidebar-server-widget
           [server]="server"
-          [selected]="this.userService.server() == server"
-          (clicked)="this.userService.selectServer($event)"
+          [selected]="userService.server() == server"
+          [folded]="preferencesService.sidebar_folded()"
+          (clicked)="userService.selectServer($event)"
         />
       </li>
     }
     </ul>
   </mat-card-content>
   <mat-card-footer>
-    <div class="flex flex-row h-full flex-grow ">
-      <div class="flex flex-grow rounded-md border-2 border-black pl-2 my-1 mr-2">
-        <span class="my-auto font-bold">
-          Login {{preferencesService.sidebar_folded()}}
+    <div class="flex flex-row h-full flex-grow ml-4 ">
+      <div class="flex flex-grow rounded-md border-2 border-black my-1 cursor-pointer hover:ring-2 hover:ring-blue-200 active:ring-blue-500" [routerLink]="['/login']">
+        <img src="ui/account_circle_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Close Panel" [class]=" 'h-10 w-10 my-auto ' + preferencesService.sidebar_folded() ? '' : 'mx-auto'  "/>
+        @if(preferencesService.sidebar_folded()){
+          <span class="my-auto font-bold flex flex-row" >
+            @if(userService.user() !== undefined){
+              {{userService.user().username}}
+            } @else {
+              Login
+            }
         </span>
+        }
       </div>
       <div class="flex my-1 rounded-md mr-1">
-        <span class="material-symbols-outlined text-4xl">
-          <button (click)="preferencesService.sidebar_folded.set(!preferencesService.sidebar_folded())" class="">
-            {{!preferencesService.sidebar_folded() ? 'left_panel_open' : 'left_panel_close'}}
+        <span class="text-4xl">
+          <button (click)="preferencesService.sidebar_folded.set(!preferencesService.sidebar_folded())" class="h-full">
+            @if(preferencesService.sidebar_folded()){
+              <img src="ui/left_panel_close_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Close Panel" class="w-8 h-8 my-auto"/>
+            } @else {
+              <img src="ui/left_panel_open_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="Open Panel" class="w-8 h-8"/>
+            }
           </button>
         </span>
     </div>
     </div>
+
   </mat-card-footer>
 </mat-card>
 
