--- a/src/components/sidebar/sidebar-server-widget/sidebar-server-widget.component.html
+++ b/src/components/sidebar/sidebar-server-widget/sidebar-server-widget.component.html
@@ -1,3 +1,13 @@
-<div [class]="(selected ?  'bg-red-500' : '') + ' rounded-md border-black border-2'" (click)="doClicked()">
- {{server}}
+<div [class]="(selected ?  'ring-2 ring-blue-500' : 'hover:ring-blue-200') + ' rounded-md border-black border-2 my-1 hover:ring-2  active:ring-blue-500 cursor-pointer select-none'" (click)="doClicked()">
+  @if (!folded){
+    <img src="psyense.png" class="rounded-l-md w-8 h-8" draggable="false"/>
+  } @else {
+    <div class="flex flex-row">
+
+    <img src="psyense.png" class="rounded-l-md w-8 h-8" draggable="false"/>
+      <span class="my-auto px-2 overflow-hidden line-clamp-1">
+    {{server}}
+      </span>
+    </div>
+  }
 </div>
