--- a/src/routes/profile/profile.component.html
+++ b/src/routes/profile/profile.component.html
@@ -1,3 +1,36 @@
-      <div class="flex flex-row my-2 rounded-md  p-2 justify-between  border-2 border-black">
-        <button (click)="userService.logout()">Logout!</button>
-      </div>
+<div class="flex flex-grow w-max max-h-full m-2">
+  <div class="grid grid-cols-3 grid-rows-3 w-full h-full gap-2">
+    <div class="col-span-1 row-span-1">
+      <mat-card class="w-full h-full">
+        <mat-card-header class="border-b-[1px] border-black">
+          <span class="font-bold text-2xl"> User </span>
+        </mat-card-header>
+        <mat-card-content>
+          <div class="flex flex-col">
+            <span>Username: {{ userService.user().username }}</span>
+            <span>Email: {{ userService.user().email }}</span>
+            <span>ID: {{ userService.user()._id }}</span>
+            <span>Roles: {{ userService.user().roles }}</span>
+          </div>
+          <button
+            class="rounded-md bg-amber-50 px-2 border-black border-[1px]"
+            (click)="userService.logout()"
+          >
+            Logout!
+          </button>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-span-1 row-span-1">
+      <profile-group-join-requester/>
+    </div>
+
+    @if(this.userService.user().roles.includes(2)){
+
+    <div class="col-span-2 row-span-1 col-start-1">
+      <profile-group-admin-panel/>
+    </div>
+    }
+  </div>
+</div>
