--- a/src/components/profile/group-admin-panel/group-admin-panel.component.html
+++ b/src/components/profile/group-admin-panel/group-admin-panel.component.html
@@ -4,7 +4,7 @@
       class="h-full min-w-fit overflow-y-auto border-r-[1px] border-black overflow-x-hidden"
     >
       <ul class="py-2">
-        @for (i of this.userService.groups(); track i._id) {
+        @for (i of chatService.allGroups(); track i._id) {
           <li
             [class]="
               'select-none cursor-pointer px-2 text-center ' +
@@ -25,7 +25,7 @@
     <div class="flex flex-grow flex-col">
       <div class="border-b-[1px] border-black p-1">
         <span class="font-bold text-2xl">Group Admin</span>
-        <button (click)="userService.createGroup()">Create</button>
+        <button (click)="groupService.post_create_group()">Create</button>
       </div>
 
       <div class="flex flex-col h-full w-full">
@@ -41,8 +41,8 @@
               <li class="flex flex-row px-1 justify-between">
                 {{i.username}}
                 <div class="flex flex-row pl-1 gap-[1px]">
-                <img (click)="userService.respondToRequestToJoinGroup(selectedServer(), i, true)" src="ui/check_circle_24dp_000000_FILL0_wght0_GRAD0_opsz24.svg" alt="Open Panel" class="hover:ring-2 hover:ring-blue-500 rounded-full cursor-pointer w-6 h-6 my-auto"/>
-                <img (click)="userService.respondToRequestToJoinGroup(selectedServer(), i, false)" src="ui/cancel_24dp_000000_FILL0_wght0_GRAD0_opsz24.svg" alt="Open Panel" class="hover:ring-2 hover:ring-blue-500 rounded-full cursor-pointer w-6 h-6 my-auto"/>
+                <img (click)="groupService.post_response_joinRequest(selectedServer(), i, true)" src="ui/check_circle_24dp_000000_FILL0_wght0_GRAD0_opsz24.svg" alt="Open Panel" class="hover:ring-2 hover:ring-blue-500 rounded-full cursor-pointer w-6 h-6 my-auto"/>
+                <img (click)="groupService.post_response_joinRequest(selectedServer(), i, false)" src="ui/cancel_24dp_000000_FILL0_wght0_GRAD0_opsz24.svg" alt="Open Panel" class="hover:ring-2 hover:ring-blue-500 rounded-full cursor-pointer w-6 h-6 my-auto"/>
                 </div>
               </li>
             }
