--- a/src/components/profile/group-join-requester/group-join-requester.component.html
+++ b/src/components/profile/group-join-requester/group-join-requester.component.html
@@ -24,13 +24,13 @@
       </div>
       <div class="flex flex-col h-full w-full">
         @if(!jj()){
-          <button (click)="userService.requestToJoinGroup(selectedServer()); updateSelectedServer()" [hidden]="!selectedServer()">Request to Join</button>
+          <button (click)="groupService.post_request_join_create(selectedServer()); updateSelectedServer()" [hidden]="!selectedServer()">Request to Join</button>
         } @else {
           <button>
             Already Requested
           </button>
 
-          <button (click)="userService.cancelRequestToJoinGroup(selectedServer()); updateSelectedServer()">
+          <button (click)="groupService.post_request_join_cancel(selectedServer()); updateSelectedServer()">
             Cancel Request
           </button>
         }
