front end update - mid cleanup

--- a/src/components/ui/chat-messagesender/chat-messagesender.component.html
+++ b/src/components/ui/chat-messagesender/chat-messagesender.component.html
@@ -1,4 +1,4 @@
-<div class="border-black border-[1px] rounded-md p-1 flex flex-row">
+<div class="border-black border-2 rounded-md p-1 flex flex-row">
   <input
     type="text"
     name=""
