--- a/src/routes/group/group.component.css
+++ b/src/routes/group/group.component.css
@@ -1,20 +1,21 @@
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
-  @apply  rounded-r-md bg-purple-100;
+  height: 10px;
+  @apply  rounded-md bg-purple-100;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  @apply m-2 rounded-md bg-purple-100;
+  @apply rounded-full bg-purple-100;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  @apply m-2 rounded-md bg-purple-200;
+  @apply m-2 rounded-full bg-purple-200;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  @apply m-2 rounded-md bg-purple-400;
+  @apply m-2 rounded-full bg-purple-400;
 }
