--- a/src/routes/group/group.component.html
+++ b/src/routes/group/group.component.html
@@ -1,58 +1,73 @@
-@if(userService.selectedGroup().channels){
+@if(chatService.selectedGroup().channels){
+  <div class="max-w-32 min-w-32 w-24 border-black border-2 rounded-md m-1 justify-between flex flex-grow flex-col">
 
-  <ul class="max-w-32 min-w-32 w-24 border-black border-2 rounded-md m-1">
-    {{selectedChannel && 'selected:'+selectedChannel.name}}
-    @for(channel of userService.selectedGroup().channels ?? [{}]; track channel){
-      <li
-        class="rounded-md m-1 p-1 border-black border-2 text-sm hover:ring-2 hover:ring-blue-500"
-        (click)="selectChannel(channel)">
-        {{channel.name}}
-      </li>
-    }
-  </ul>
+    <ul class="">
+      {{selectedChannel && 'selected:'+selectedChannel.name}}
+      @for(channel of chatService.selectedGroup().channels ?? [{}]; track channel){
+        <li
+          [class]="('rounded-md m-1 p-1 border-black border-2 text-sm cursor-pointer select-none  hover:ring-2 ') + (channel == chatService.selectedChannel() ? 'ring-2 ring-blue-500' : 'ring-blue-200') "
+          (click)="selectChannel(channel)">
+          {{channel.name}}
+        </li>
+      }
+    </ul>
+    <ul class="">
+      {{selectedChannel && 'selected:'+selectedChannel.name}}
+        <li
+          class="rounded-md m-1 p-1 border-black border-2 text-sm cursor-pointer select-none  hover:ring-2"
+          >
+          Settings
+        </li>
+    </ul>
+  </div>
   <div
-    class="flex flex-grow flex-col bg-primary_100 border-black border-1px rounded-mds "
+    class="flex flex-grow flex-col bg-primary_100 border-black border-1px rounded-mds"
   >
     <div class="flex flex-grow mb-1 py-2 overflow-auto flex-col-reverse border-black border-2 rounded-md m-1">
-      <ul class="flex flex-grow flex-col m-2 ml-0">
-        @for (chat of chats(); track $index) {
-          <li class="flex justify-center w-full">
-            {{chat.content}}
-  <!--          <group-chat-message [message]="item" [fromUser]="true" />-->
+      <ul class="flex flex-grow flex-col m-2 ml-0 gap-1 p-2">
+        @for (chat of chatService.selectedChannelMessages(); track $index) {
+          <li class="flex w-full border-black border-2 border-t-0 rounded-md border-r-0">
+            <div class="flex flex-col w-full">
+              <div class="flex border-2 border-l-0 border-b-0 rounded-md rounded-b-none border-black flex-shrink w-fit max-w-52 pr-2 bg-gray-300">
+                <img src="{{'http://localhost:3200/uploads/'+chat.sender.profileImage}}" class="w-6 h-6 rounded-md">
+                <span class="my-auto flex flex-grow w-full pl-2">
+                  {{chat.sender.username}}
+                </span>
+              </div>
+              <div class="flex flex-grow flex-col w-full border-t-2 border-r-2 border-black rounded-r-md overflow-hidden whitespace-normal">
+                <span class="block break-words p-1 ">{{chat.content}}</span>
+                @if(chat.content.length % 2 == 0){
+                <div class="p-2 rounded-md border-black border-[1px] w-fit m-2 flex flex-row gap-2 overflow-x-scroll">
+                  @for(image of ['http://localhost:4444/bb5.jpg', 'http://localhost:4444/bb6.jpg', 'http://localhost:4444/bb3.jpg', 'http://localhost:4444/bb2.jpg', 'http://localhost:4444/bb.jpg', 'http://localhost:4444/bb4.jpg',]; track $index) {
+                    <img src="{{image}}" class="max-h-52 hover:ring-2 hover:ring-blue-300 cursor-pointer rounded-sm" alt="qt" (click)="enlargeImage(image)"/>
+                  }
+
+                </div>
+                }
+              </div>
+            </div>
           </li>
         }
       </ul>
     </div>
-    @if(userService.selectedChannel()){
-          <chat-message-sender />
+    @if(chatService.selectedChannel()){
+      <div class="p-1 flex flex-row w-full gap-1">
+        <div class="border-black border-2 rounded-md p-1 flex flex-row w-max">
+          <form (ngSubmit)="uploadImage()" class="flex flex-row" enctype="multipart/form-data">
+            <input type="file" name="avatar" id="image" accept="image/*" (change)="onFileSelected($event)">
+          <button
+            type="submit"
+            class="px-2 mx-2 border-black rounded-md border-[1px] whitespace-nowrap"
+          >
+            Upload Image
+          </button>
+          </form>
+        </div>
+        <chat-message-sender />
+      </div>
     }
   </div>
+  <div *ngIf="enlargedImage" class="fixed inset-0 bg-black bg-opacity-75 flex justify-center items-center z-50 p-12 cursor-pointer" (click)="closeImage()">
+    <img alt="enlarged image" [src]="enlargedImage" class="max-w-full max-h-full cursor-default" (click)="$event.stopPropagation()" />
+  </div>
 }
-
-<!--&lt;!&ndash;<p>group works!</p>&ndash;&gt;-->
-<!--<div class="grid grid-cols-8 bg-blue-200 flex-grow">-->
-<!--  <div class="w-full col-span-1 bg-blue-500 flex flex-grow">-->
-
-<!--  </div>-->
-<!--  <div class="w-full col-span-7 flex-grow bg-red-500">-->
-<!--    <div-->
-<!--      class="flex flex-grow flex-col bg-primary_100 border-black h-full border-1px rounded-md m-2 p-2"-->
-<!--    >-->
-<!--      <div class="flex flex-grow mb-1 py-2 overflow-auto flex-col-reverse">-->
-
-<!--        <ul class="flex flex-grow flex-col m-2 ml-0">-->
-<!--      @if(chats()){-->
-<!--      @for (chat of chats(); track $index){-->
-<!--        <li class="flex justify-center w-full">-->
-<!--          {{chat}}-->
-<!--        </li>-->
-<!--        }-->
-<!--      }-->
-<!--    </ul>-->
-<!--      </div>-->
-
-<!--      <chat-message-sender />-->
-
-<!--      </div>-->
-<!--  </div>-->
-<!--</div>-->
