--- a/src/routes/profile/profile.component.html
+++ b/src/routes/profile/profile.component.html
@@ -18,6 +18,10 @@
           >
             Logout!
           </button>
+
+          <div class="border-black border-2 p-2 rounded-md m-2">
+            Profile Picture
+          </div>
         </mat-card-content>
       </mat-card>
     </div>
