--- a/src/components/sidebar/sidebar-main/sidebar-main.component.html
+++ b/src/components/sidebar/sidebar-main/sidebar-main.component.html
@@ -5,19 +5,19 @@
     </a>
     @if(preferencesService.sidebar_folded()){
       <span class="pl-2">
-        {{userService.server()?.name}}
+        {{chatService.selectedServer()?.name}}
       </span>
     }
   </mat-card-header>
   <mat-card-content class="overflow-y-scroll w-full h-full">
     <ul class="  w-max flex flex-col flex-grow">
-    @for(server of userService.groups(); track server._id){
+    @for(server of chatService.userGroups(); track server._id){
       <li class="">
         <app-sidebar-server-widget
           [server]="server"
-          [selected]="userService.server() == server"
+          [selected]="chatService.selectedServer() == server"
           [folded]="preferencesService.sidebar_folded()"
-          (clicked)="userService.selectServer($event)"
+          (clicked)="chatService.select_server($event)"
         />
       </li>
     }
