--- a/src/routes/profile/profile.component.html
+++ b/src/routes/profile/profile.component.html
@@ -1,26 +1,42 @@
-<div class="flex flex-grow w-max max-h-full m-2">
+<div class="flex flex-grow w-max max-h-full m-2  ">
   <div class="grid grid-cols-3 grid-rows-3 w-full h-full gap-2">
-    <div class="col-span-1 row-span-1">
-      <mat-card class="w-full h-full">
-        <mat-card-header class="border-b-[1px] border-black">
-          <span class="font-bold text-2xl"> User </span>
+    <div class="col-span-1 row-span-1 " >
+      <mat-card class="w-full h-full ">
+        <mat-card-header class="border-b-[1px] border-black justify-between">
+          <span class="font-bold text-2xl mr-auto"> User </span>
+          <button
+            class="rounded-md bg-amber-50 px-2 border-black border-[1px] my-auto"
+            (click)="userService.logout()"
+          >
+            Logout!
+          </button>
         </mat-card-header>
-        <mat-card-content>
-          <div class="flex flex-col">
+        <mat-card-content class="overflow-y-scroll">
+          <div class="flex flex-row m-1">
+
+          <div class="flex flex-col ">
             <span>Username: {{ userService.user().username }}</span>
             <span>Email: {{ userService.user().email }}</span>
             <span>ID: {{ userService.user()._id }}</span>
             <span>Roles: {{ userService.user().roles }}</span>
           </div>
-          <button
-            class="rounded-md bg-amber-50 px-2 border-black border-[1px]"
-            (click)="userService.logout()"
-          >
-            Logout!
-          </button>
+            <div class="justify-center mx-auto">
+              <img src="{{'http://localhost:3200/uploads/'+userService.user().profileImage}}" class="w-32 h-32 rounded-md mx-auto">
+            </div>
+          </div>
+
 
           <div class="border-black border-2 p-2 rounded-md m-2">
             Profile Picture
+            <form (ngSubmit)="uploadImage()" class="flex flex-col gap-1" enctype="multipart/form-data">
+              <input type="file" name="avatar" id="image" accept="image/*" (change)="onFileSelected($event)">
+              <button
+                type="submit"
+                class="px-2 border-black rounded-md border-[1px] whitespace-nowrap "
+              >
+                Upload Image
+              </button>
+            </form>
           </div>
         </mat-card-content>
       </mat-card>
