--- a/src/routes/group/group.component.html
+++ b/src/routes/group/group.component.html
@@ -84,7 +84,7 @@
             </ul>
 <!--            <button (click)="chatService.sendNewDataToPeer()">New Data to {{chatService.lastPeer?.id}}</button>-->
           </div>
-            <div class="border-black border-2 rounded-md flex flex-grow bg-red-500 flex-row">
+            <div class="border-black border-2 rounded-md flex flex-grow  flex-row">
               <div class="w-1/2">
                 <label class="absolute font-bold bg-white px-2 rounded-md m-1">You</label>
                 <video [srcObject]="callYouStream()" autoplay playsinline class="flex flex-grow "></video>
